--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 				<img src="img/1.jpg"/>
 			</div>
 			
-			<a class="arrow" id="left"></a>
-			<a class="arrow" id="right"></a>				
+			<a class="arrow" id="left">&lt;</a>
+			<a class="arrow" id="right">&gt;</a>				
 			
 			<div id="buttons">
 				<span index="1" class="on"></span>
